cmake_minimum_required(VERSION 3.0)
project(JSON-comparison)
find_package(nlohmann_json REQUIRED CONFIG)
add_library(comparison SHARED comparison.cpp)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE comparison crypto ssl nlohmann_json::nlohmann_json)
install(TARGETS comparison DESTINATION lib)
install(FILES comparison.hpp DESTINATION include)